syntax = "proto3";

package workstream.tasks.v1;

option go_package = "github.com/danilobml/workstream/internal/gen/tasks/v1";

// NOTE: task_id is a UUID

service TasksService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
    rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse);
}

message Task {
    string task_id = 1;
    string title = 2;
    bool completed = 3; 
}

message CreateTaskRequest {
    string title = 1;
}
message CreateTaskResponse {
    Task task = 1;
}

message GetTaskRequest { 
    string task_id = 1;
}
message GetTaskResponse {}

message ListTasksRequest {}
message ListTasksResponse {}

message CompleteTaskRequest {
    string task_id = 1;
}
message CompleteTaskResponse {}
